[tool.poetry]
name = "repl_python3_beta_FondOtherOutput"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas-datareader = "^0.9.0"
numpy = "^1.19.2"
pytz = "^2020.1"
pandas = "^1.1.3"
yfinance = "^0.1.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
